Fixed Spacing

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -460,7 +460,7 @@ body {
 }
 
 .createNote {
-  padding: 2rem 1rem 0 1rem;
+  padding: 2rem 1rem 2rem 1rem;
 
   .new-note-title {
     color: $text-main;
